Archive2/05/bb232fcbf4a13e/output
main.cpp:3:33: error: expected ';' after class
template<std::size_t> class C {}
                                ^
                                ;
main.cpp:7:18: warning: unused variable 'p' [-Wunused-variable]
    C<4> * const p = &c;
                 ^
1 warning and 1 error generated.
